@@ -1,7 +1,7 @@
 ## Interface: 60000
 ## Title: IGAS_UI
 ## Author: kurapica.igas@gmail.com
-## Version: v34
+## Version: v35
 ## Notes: UI demo for IGAS
 ## eMail: kurapica.igas@gmail.com
 ## URL: http://github.com/kurapica
